--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -325,6 +325,226 @@
     {
       "cell_type": "code",
       "source": [
+        "#@markdown zzz<left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/ddPn08/kohya-sd-scripts-webui\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/Linaqruf/kohya-trainer\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://zhuyu1997.github.io/open-pose-editor/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </center></font></a>\n",
+        "import os\n",
+        "import shutil\n",
+        "import urllib.request\n",
+        "#from IPython.utils import capture\n",
+        "from IPython.utils.capture import capture_output\n",
+        "from IPython.display import clear_output\n",
+        "import sys\n",
+        "import fileinput\n",
+        "import ipywidgets as widgets\n",
+        "from ipywidgets import HBox, VBox\n",
+        "from ipywidgets import interact, interactive, fixed\n",
+        "from ipywidgets import Layout, SelectMultiple\n",
+        "from IPython.core.display import HTML\n",
+        "\n",
+        "zzz_install = \"/content/sample_data\"\n",
+        "zzz_install_widget = widgets.Text(value=zzz_install, description=\"zzz_install\")\n",
+        "zzz_Version = widgets.Dropdown(options=[\"V1.5\", \"V2.1\"], description=\"Version\")\n",
+        "Download_Base_Model = widgets.Text(value=\"\", description=\"Download_Base_Model\")\n",
+        "zzz = \"zzz\"\n",
+        "zzz_widget = widgets.Text(value=zzz, description=\"zzz\")\n",
+        "xyz = (zzz_install+'/'+'zzz')\n",
+        "xyz_widget = widgets.Text(value=xyz, description=\"xyz\")\n",
+        "\n",
+        "zzz_Args = widgets.Text(value=\"\", description=\"Args\")\n",
+        "zzz_Training = widgets.Dropdown(options=[\"\", \"Kohya\", \"New_Dreambooth\", \"Old_Dreambooth\"], description=\"Training\")\n",
+        "\n",
+        "ctrll5 = widgets.Checkbox(value=False, description=\"ctrll5\")\n",
+        "ctrlxl = widgets.Checkbox(value=False, description=\"ctrlxl\")\n",
+        "\n",
+        "zzz_Extensions = widgets.Checkbox(value=False, description=\"Extensions\")\n",
+        "zzz_Upscaler = widgets.Checkbox(value=False, description=\"Upscalers\")\n",
+        "zzz_Big_Models = widgets.Checkbox(value=False, description=\"Big_Models\")\n",
+        "zzz_Continue = widgets.Checkbox(value=False, description=\"🔵 zzz CONTINUE\")\n",
+        "\n",
+        "zzzconfigV2=\"--config v2-inference-v.yaml\"\n",
+        "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae\" + zzz_Args.value\n",
+        "\n",
+        "os.chdir(zzz_install_widget.value)\n",
+        "boton_runzzz = widgets.Button(description=\"⭕ RUN > > > zzz\")\n",
+        "boton_runzzz.style.button_color = '#1e1e1e'\n",
+        "boton_runzzz.style.font_weight = 'bold'\n",
+        "boton_runzzz.style.color = 'black'\n",
+        "\n",
+        "left_box = widgets.VBox([ctrll5])\n",
+        "right_box = widgets.VBox([ctrlxl])\n",
+        "group_box = widgets.HBox([left_box, right_box],layout=widgets.Layout(height='45px', width='100%'))\n",
+        "\n",
+        "left_box.layout.max_width = '150px'\n",
+        "right_box.layout.max_width = '170px'\n",
+        "left_box.layout.overflow = 'hidden'\n",
+        "right_box.layout.overflow = 'hidden'\n",
+        "\n",
+        "widgets_box = widgets.VBox([zzz_install_widget, Download_Base_Model],layout=widgets.Layout(height='80px', width='100%'))\n",
+        "final_box = widgets.VBox([zzz_Args, zzz_Training],layout=widgets.Layout(height='90px', width='100%'))\n",
+        "final_box1 = widgets.VBox([zzz_Extensions, zzz_Upscaler, zzz_Big_Models],layout=widgets.Layout(height='140px', width='100%'))\n",
+        "final_box2 = widgets.VBox([zzz_Continue],layout=widgets.Layout(height='90px', width='100%'))\n",
+        "\n",
+        "# zzz_Runzzz\n",
+        "def runzzz(b):\n",
+        "    global widgets_box, boton_runzzz\n",
+        "    widgets_box.close()\n",
+        "    final_box.close()\n",
+        "    final_box1.close()\n",
+        "    final_box2.close()\n",
+        "    group_box.close()\n",
+        "    boton_runzzz.close()\n",
+        "    group_title.close()\n",
+        "\n",
+        "    if not zzz_Continue.value:\n",
+        "      with capture_output() as cap:\n",
+        "        import os\n",
+        "        if os.path.exists(zzz_widget.value):\n",
+        "          shutil.rmtree(zzz_widget.value)\n",
+        "          import os; link = \"https://github.com/A U T O M A T I C 1 1 1 1/s t a b l e-d i f f u s i o n-w e b u i.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} zzz\")\n",
+        "\n",
+        "        import os\n",
+        "        if not os.path.exists(zzz_widget.value):\n",
+        "          import os; link = \"https://github.com/A U T O M A T I C 1 1 1 1/s t a b l e-d i f f u s i o n-w e b u i.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} zzz\")\n",
+        "\n",
+        "        %cd zzz\n",
+        "        !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
+        "        !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
+        "        !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
+        "\n",
+        "        clear_output()\n",
+        "      print('\u001b[1;96mInstalling zzz ✓')\n",
+        "\n",
+        "    if zzz_Continue.value:\n",
+        "      with capture_output() as cap:\n",
+        "        import os\n",
+        "        os.chdir(xyz_widget.value)\n",
+        "        clear_output()\n",
+        "      print('\u001b[1;96mPreparing zzz Continue ✓')\n",
+        "\n",
+        "    with capture_output() as cap:\n",
+        "      import os\n",
+        "      os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
+        "      !apt --fix-broken install\n",
+        "      !pip install fastapi==0.94.0 -qq\n",
+        "\n",
+        "# zzz_Models\n",
+        "      os.chdir(xyz_widget.value)\n",
+        "      ruta = 'models/S t a b l e-d i f f u s i  on'\n",
+        "      ruta_modificada = ruta.replace(' ', '_')\n",
+        "      %cd $ruta_modificada\n",
+        "      download_command = f\"apt-get install -qq -y aria2 && url=\\\"{Download_Base_Model.value}\\\" && base_name=$(basename $url) && ((echo $url | grep -q \\\"drive.google.com\\\") && gdown --fuzzy $url || ((echo $url | grep -q \\\"huggingface.co/\\\") && (hf_token=\\\"\\\" && aria2c --console-log-level=error --summary-interval=10 --header=\\\"Authorization: Bearer $hf_token\\\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 $url)\"\n",
+        "      os.system(download_command)\n",
+        "\n",
+        "# zzz_Extensions\n",
+        "      if zzz_Extensions.value:\n",
+        "        os.chdir(xyz_widget.value)\n",
+        "        %cd extensions\n",
+        "        link = \"https://github.com/etherealxx/batchlinks-w e b u i\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/Coyote-A/u l t i mate-upscale-for-a u t o m a t i c 1 1 1 1\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/DominikDoom/a 1 1 1 1-s d-w e b u i-tagcomplete\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/zanllp/s d-w e b ui-i n f i n i t e-image-browsing\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/camenduru/s d-w e b u i-t u n nels\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/yankooliveira/s d-w e b u i-pho topea-em bed\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/Physton/s d-w e b ui -p r o m pt-a l l-i n-o ne\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/richrobber2/canvas-zoom\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/viyiviyi/s t a b l e-d i f f u s i on-w eb u i-zoomimage\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/ArtVentureX/s d-w e b ui-a ge n t-s ch eduler\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        %cd ..\n",
+        "\n",
+        "# zzz_ControlNet\n",
+        "      os.chdir(xyz_widget.value+'/''extensions')\n",
+        "      %cd extensions\n",
+        "      import os; link = \"https://github.com/M i k ub i l l/s d-w e b ui-c o nt r o l n et.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} ctrl\")\n",
+        "\n",
+        "      %cd ctrl/models\n",
+        "\n",
+        "      if ctrll5.value:\n",
+        "          import os; link = \"https://huggingface.co/llly as viel/Con tr ol N et-v1-1/resolve/main/c o n t ro l_v11p_sd15_c a n n y.pth\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')}   \")\n",
+        "          import os; link = \"https://huggingface.co/llly as viel/Con tr ol N et-v1-1/resolve/main/c o n t ro l_v11f1p_sd15_depth.pth\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')}   \")\n",
+        "          import os; link = \"https://huggingface.co/llly as viel/Con tr ol N et-v1-1/resolve/main/c o n t ro l_v11p_sd15_lineart.pth\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')}   \")\n",
+        "          import os; link = \"https://huggingface.co/llly as viel/Con tr ol N et-v1-1/resolve/main/c o n t ro l_v11p_sd15_mlsd.pth\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')}   \")\n",
+        "          import os; link = \"https://huggingface.co/llly as viel/Con tr ol N et-v1-1/resolve/main/c o n t ro l_v11p_sd15_normalbae.pth\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')}   \")\n",
+        "          import os; link = \"https://huggingface.co/llly as viel/Con tr ol N et-v1-1/resolve/main/c o n t ro l_v11p_sd15_openpose.pth\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')}   \")\n",
+        "          import os; link = \"https://huggingface.co/llly as viel/Con tr ol N et-v1-1/resolve/main/c o n t ro l_v11p_sd15_scribble.pth\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')}   \")\n",
+        "          import os; link = \"https://huggingface.co/llly as viel/Con tr ol N et-v1-1/resolve/main/c o n t ro l_v11p_sd15_seg.pth\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')}   \")\n",
+        "          import os; link = \"https://huggingface.co/llly as viel/Con tr ol N et-v1-1/resolve/main/c o n t ro l_v11e_sd15_ip2p.pth\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')}   \")\n",
+        "          import os; link = \"https://huggingface.co/llly as viel/Con tr ol N et-v1-1/resolve/main/c o n t ro l_v11e_sd15_shuffle.pth\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')}   \")\n",
+        "          import os; link = \"https://huggingface.co/llly as viel/Con tr ol N et-v1-1/resolve/main/c o n t ro l_v11p_sd15_inpaint.pth\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')}   \")\n",
+        "          import os; link = \"https://huggingface.co/llly as viel/Con tr ol N et-v1-1/resolve/main/c o n t ro l_v11p_sd15_softedge.pth\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')}   \")\n",
+        "          import os; link = \"https://huggingface.co/llly as viel/Con tr ol N et-v1-1/resolve/main/c o n t ro l_v11p_sd15s2_lineart_anime.pth\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')}   \")\n",
+        "          import os; link = \"https://huggingface.co/llly as viel/Con tr ol N et-v1-1/resolve/main/c o n t ro l_v11f1e_sd15_tile.pth\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')}   \")\n",
+        "          import os; link = \"https://civitai.com/api/download/models/85428\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')} -O lightingBasedPicture_v10.safetensors  \")\n",
+        "          import os; link = \"https://civitai.com/api/download/models/111973\"; os.system(f\"gdown --no-cookies {link.replace(' ', '')} -O controlnetQRPatternQR_v20.safetensors  \")\n",
+        "\n",
+        "# zzz_Upscalers\n",
+        "      if zzz_Upscaler.value:\n",
+        "        os.chdir(xyz_widget.value+'/'+'models')\n",
+        "\n",
+        "        if not os.path.exists('ESRGAN'):\n",
+        "            os.makedirs('ESRGAN')\n",
+        "        %cd ESRGAN\n",
+        "        import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(xyz_widget.value+'/SDZ_Upscalers.txt') if not os.path.exists('4x_UniversalUpscalerV2-Sharper_103000_G.pth') for executor in [ThreadPoolExecutor(max_workers=len(open(xyz_widget.value+'/SDZ_Upscalers.txt').readlines()))]];\n",
+        "\n",
+        "# zzz_Training\n",
+        "      selected_option = zzz_Training.value\n",
+        "      if selected_option == \"Kohya\":\n",
+        "        os.chdir(xyz_widget.value)\n",
+        "        %cd extensions\n",
+        "        !git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
+        "        %cd ..\n",
+        "\n",
+        "      elif selected_option == \"New_Dreambooth\":\n",
+        "        os.chdir(xyz_widget.value)\n",
+        "        %cd extensions\n",
+        "        !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "        %cd ..\n",
+        "\n",
+        "      elif selected_option == \"Old_Dreambooth\":\n",
+        "        os.chdir(xyz_widget.value)\n",
+        "        if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
+        "          !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "          !bash ./py310.sh -b -f -p /usr/local\n",
+        "          !python -m ipykernel install --name \"py310\" --user\n",
+        "          !conda install -c \"xformers/label/dev\" xformers -y\n",
+        "          !pip install open-clip-torch\n",
+        "          !pip install triton\n",
+        "          !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
+        "        os.chdir(zzz_install_widget.value)\n",
+        "        %cd stable-diffusion-webui\n",
+        "        !git checkout 1130d5df669911a5c67696be90bccca3ecf5f487\n",
+        "        !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/zzz/main/zzz_custom/config.json\n",
+        "        !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/zzz/main/zzz_custom/user_old.css -O user.css\n",
+        "        %cd extensions\n",
+        "        !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "        %cd sd_dreambooth_extension\n",
+        "        !git checkout f9900ccb3ce7025d1c89334e320a1c3b255bbd07\n",
+        "        %cd ../..\n",
+        "\n",
+        "      else: selected_option = \"\"\n",
+        "      os.chdir(xyz_widget.value)\n",
+        "\n",
+        "\n",
+        "    clear_output()\n",
+        "    print('\u001b[1;90mPreparing zzz System ✓')\n",
+        "\n",
+        "    selected_option = zzz_Version.value\n",
+        "    if selected_option == \"V1.5\":\n",
+        "        !python launch.py $share\n",
+        "\n",
+        "boton_runzzz.on_click(runzzz)\n",
+        "group_title = widgets.HTML(value='ControlNet')\n",
+        "group_title2 = widgets.HTML(value='')\n",
+        "display(widgets_box, group_title, group_box, group_title2, final_box, final_box1, final_box2, boton_runzzz)"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "3-kZBdzprEVz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/ddPn08/kohya-sd-scripts-webui\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/Linaqruf/kohya-trainer\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://zhuyu1997.github.io/open-pose-editor/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </center></font></a>\n",
         "##@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>SDZboton</font> <a href=\"https://pbs.twimg.com/profile_images/1022127431447195649/ASyO_yY3_400x400.jpg\"><font face='Verdana Regular' color='#80ff3' size='4'>SDZboton</font></a>\n",
         "import os\n",
