--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -170,7 +170,7 @@
         "        link = \"https://github.com/vi yiv iyi/s t a b l e-d i f f u s i on-w eb u i-zoomimage\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
         "        link = \"https://github.com/Ar tVe ntu reX/s d-w e b ui-a ge n t-s ch eduler\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
         "        #link = \"https://github.com/gl uc au ze/s d-w e b u i-f ace s wa p l ab \"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/P 2 En j oy/s d-w e b u i-r o op-u n c e ns ored\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/P 2 En j oy/s d-w e b u i-r o op-u n c e ns ored\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
         "        %cd ..\n",
         "\n",
         "        os.chdir(xyz_widget.value)\n",
