--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -82,7 +82,7 @@
         "zzz_Continue = widgets.Checkbox(value=False, description=\"CONTINUE / / / \")\n",
         "\n",
         "zzzconfigV2=\"--config v2-inference-v.yaml\"\n",
-        "share = \"--share --api --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae\" + zzz_Args.value\n",
+        "share = \"--share --api --xformers --theme=dark --disable-safe-unpickle --medvram-sdxl --enable-insecure-extension-access --no-half-vae\" + zzz_Args.value\n",
         "\n",
         "os.chdir(zzz_install_widget.value)\n",
         "boton_runzzz = widgets.Button(description=\"RUN > > > S.D.Z\")\n",
@@ -158,35 +158,14 @@
         "# zzz_Extensions\n",
         "      if zzz_Extensions.value:\n",
         "        os.chdir(xyz_widget.value)\n",
-        "        %cd extensions\n",
-        "        link = \"https://github.com/et her ea lx x/ba tc hlinks-w e b u i\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/Co yot e-A/u l t i m ate-ups cale-for-a u t o m a t i c 1 1 1 1\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/Dom inik Doom/a 1 1 1 1-s d-w e b u i-tagcomplete\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/za nl lp/s d-w e b ui-i n f i n i t e-image-browsing\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/c am en du ru/s d-w e b u i-t u n nels\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/yan koo liv eira/s d-w eb ui-p ho to pea-em bed\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/Ph ys ton/s d-w e b ui -p r o m pt-a l l-i n-o ne\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/ric hr obb er2/ca nva s-zo om\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/vi yiv iyi/s t a b l e-d i f f u s i on-w eb u i-zoomimage\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/Ar tVe ntu reX/s d-w e b ui-a ge n t-s ch eduler\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/gl uc au ze/s d-w e b u i-f ace s wa p l ab \"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/P 2 En j oy/s d-w e b u i-r o op-u n c e ns ored\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        %cd ..\n",
-        "\n",
-        "        os.chdir(xyz_widget.value)\n",
-        "        %cd embeddings\n",
-        "        import os; link = \"https://huggingface.co/uwg/modelz_base/resolve/main/em be ddi ngs/ba d-han ds-5.pt\"; os.system(f\"wget --timestamping {link.replace(' ', '')} \")\n",
-        "        import os; link = \"https://huggingface.co/uwg/modelz_base/resolve/main/em be ddi ngs/ea sy neg ative.safetensors\"; os.system(f\"wget --timestamping {link.replace(' ', '')} \")\n",
-        "        %cd ..\n",
-        "\n",
-        "        os.chdir(xyz_widget.value)\n",
         "        %cd models/VAE\n",
         "        import os; link = \"https://huggingface.co/uwg/modelz_base/resolve/main/VA E/v ae-f t-m se-8 4 0000-ema-p r uned.ckpt\"; os.system(f\"wget --timestamping {link.replace(' ', '')} \")\n",
         "        import os; link = \"https://huggingface.co/ckpt/s d x l_v ae/resolve/main/s d x l_v a e.safetensors\"; os.system(f\"wget --timestamping {link.replace(' ', '')} \")\n",
         "        %cd ..\n",
         "\n",
-        "        os.chdir(xyz_widget.value)\n",
-        "        %cd models/Lora\n",
+        "        if not os.path.exists('Lora'):\n",
+        "          os.makedirs('Lora')\n",
+        "        %cd Lora\n",
         "        import os; link = \"https://civitai.com/api/download/models/6 300 6\"; output_file = \"Lo wRA.saf etensors\"; os.system(f\"wget --timestamping {link.replace(' ', '')} -O {output_file.replace(' ', '')}\")\n",
         "        import os; link = \"https://civitai.com/api/download/models/117467\"; output_file = \"polyh edron_sk inny_all.pt\"; os.system(f\"wget --timestamping {link.replace(' ', '')} -O {output_file.replace(' ', '')}\")\n",
         "        import os; link = \"https://civitai.com/api/download/models/117955\"; output_file = \"topo_v4.safetensors\"; os.system(f\"wget --timestamping {link.replace(' ', '')} -O {output_file.replace(' ', '')}\")\n",
@@ -198,6 +177,27 @@
         "        import os; link = \"https://huggingface.co/cas que/detailed_eye-10/resolve/main/deta iled_eye-10.safetensors\"; os.system(f\"wget --timestamping {link.replace(' ', '')} \")\n",
         "        #import os; link = \"https://huggingface.co/uwg/modelz_base/resolve/main/Lora/Clo thi ngAd juster2.safetensors\"; os.system(f\"wget --timestamping {link.replace(' ', '')} \")\n",
         "        %cd ../..\n",
+        "\n",
+        "        %cd embeddings\n",
+        "        import os; link = \"https://huggingface.co/uwg/modelz_base/resolve/main/em be ddi ngs/ba d-han ds-5.pt\"; os.system(f\"wget --timestamping {link.replace(' ', '')} \")\n",
+        "        import os; link = \"https://huggingface.co/uwg/modelz_base/resolve/main/em be ddi ngs/ea sy neg ative.safetensors\"; os.system(f\"wget --timestamping {link.replace(' ', '')} \")\n",
+        "        %cd ..\n",
+        "\n",
+        "        %cd extensions\n",
+        "        link = \"https://github.com/et her ea lx x/ba tc hlinks-w e b u i\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/Co yot e-A/u l t i m ate-ups cale-for-a u t o m a t i c 1 1 1 1\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/Dom inik Doom/a 1 1 1 1-s d-w e b u i-tagcomplete\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/za nl lp/s d-w e b ui-i n f i n i t e-image-browsing\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/c am en du ru/s d-w e b u i-t u n nels\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/yan koo liv eira/s d-w eb ui-p ho to pea-em bed\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/Ph ys ton/s d-w e b ui -p r o m pt-a l l-i n-o ne\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/ric hr obb er2/ca nva s-zo om\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/vi yiv iyi/s t a b l e-d i f f u s i on-w eb u i-zoomimage\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/Ar tVe ntu reX/s d-w e b ui-a ge n t-s ch eduler\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/P 2 En j oy/s d-w e b u i-r o op-u n c e ns ored\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #import os; link = \"https://github.com/gl uc au ze/s d-w e b u i-f ace s wa p l ab.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} fwap\")\n",
+        "        #import os; actualdir = os.getcwd(); os.chdir(xyz_widget.value+'/extensions/fwap/'); os.system(\"source venv/bin/activate\"); os.system(\"pip install -r ./requirements.txt\"); os.system(\"pip install -r ./requirements-gpu.txt\"); os.chdir(actualdir)\n",
+        "        %cd ..\n",
         "\n",
         "# zzz_ctrl\n",
         "      os.chdir(xyz_widget.value)\n",
