sdz v4 fix model init dir

--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -24,7 +24,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "clear_output()\n",
-        "print('\u001b[1;32mDrive Connected ✓')\n",
+        "print('\u001b[1;96mDrive Connected ✓')\n",
         "\n",
         "\n",
         "\n",
@@ -38,7 +38,7 @@
         "#!wget --no-check-certificate $url\n",
         "\n",
         "#clear_output()\n",
-        "#print('[1;32mModel Save ✓')\n"
+        "#print('\u001b[1;96mModel Save ✓')\n"
       ]
     },
     {
@@ -68,7 +68,13 @@
         "xyz = (zzz_install+'/'+'zzz')\n",
         "xyz_widget = widgets.Text(value=xyz, description=\"xyz\")\n",
         "\n",
-        "zzz_Args = widgets.Text(value=\"\", description=\"Args\")\n",
+        "model_initp = \"\"\n",
+        "model_init = widgets.Text(value=model_initp, description=\"Model_init\")\n",
+        "models_dirp = \"\"\n",
+        "models_dir = widgets.Text(value=models_dirp, description=\"Models_dir\")\n",
+        "\n",
+        "zzz_Argsp = \"\"\n",
+        "zzz_Args = widgets.Text(value=zzz_Argsp, description=\"Args\")\n",
         "zzz_Training = widgets.Dropdown(options=[\"\", \"hyako\", \"dramb\"], description=\"Training\")\n",
         "\n",
         "ctrll5 = widgets.Checkbox(value=False, description=\"ctrll5\")\n",
@@ -82,7 +88,7 @@
         "zzz_Continue = widgets.Checkbox(value=False, description=\"CONTINUE / / / \")\n",
         "\n",
         "zzzconfigV2=\"--config v2-inference-v.yaml\"\n",
-        "share = \"--share --api --xformers --theme=dark --disable-safe-unpickle --medvram-sdxl --enable-insecure-extension-access --no-half-vae\" + zzz_Args.value\n",
+        "zshare = \"--share --api --xformers --medvram-sdxl --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --cors-allow-origins=https://www.painthua.com\"\n",
         "\n",
         "os.chdir(zzz_install_widget.value)\n",
         "boton_runzzz = widgets.Button(description=\"RUN > > > S.D.Z\")\n",
@@ -102,7 +108,7 @@
         "right_box.layout.overflow = 'hidden'\n",
         "\n",
         "widgets_box = widgets.VBox([zzz_install_widget, Download_Base_Model],layout=widgets.Layout(height='80px', width='100%'))\n",
-        "final_box = widgets.VBox([zzz_Args, zzz_Training],layout=widgets.Layout(height='90px', width='100%'))\n",
+        "final_box = widgets.VBox([model_init, models_dir, zzz_Args, zzz_Training],layout=widgets.Layout(height='200px', width='100%'))\n",
         "final_box1 = widgets.VBox([zzz_Extensions, zzz_Upscaler],layout=widgets.Layout(height='80px', width='100%'))\n",
         "final_box2 = widgets.VBox([zzz_Continue],layout=widgets.Layout(height='90px', width='100%'))\n",
         "\n",
@@ -244,7 +250,7 @@
         "    os.chdir(xyz_widget.value)\n",
         "    selected_option = zzz_Version.value\n",
         "    if selected_option == \"V1.5\":\n",
-        "        !python launch.py $share\n",
+        "        !python launch.py $zshare --ckpt \"$model_init.value\" --ckpt-dir \"$models_dir.value\" $zzz_Args.value\n",
         "\n",
         "boton_runzzz.on_click(runzzz)\n",
         "group_title = widgets.HTML(value='')\n",
