--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -73,7 +73,7 @@
         "models_dirp = \"\"\n",
         "models_dir = widgets.Text(value=models_dirp, description=\"Models_dir\")\n",
         "\n",
-        "zzz_Argsp = \"\"\n",
+        "zzz_Argsp = \"--medvram-sdxl\"\n",
         "zzz_Args = widgets.Text(value=zzz_Argsp, description=\"Args\")\n",
         "zzz_Training = widgets.Dropdown(options=[\"\", \"hyako\", \"dramb\"], description=\"Training\")\n",
         "\n",
@@ -88,14 +88,13 @@
         "zzz_Continue = widgets.Checkbox(value=False, description=\"CONTINUE / / / \")\n",
         "\n",
         "zzzconfigV2=\"--config v2-inference-v.yaml\"\n",
-        "zshare = \"--share --api --xformers --medvram-sdxl --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --cors-allow-origins=https://www.painthua.com\"\n",
+        "zshare = \"--share --api --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --cors-allow-origins=https://www.painthua.com\"\n",
         "\n",
         "os.chdir(zzz_install_widget.value)\n",
         "boton_runzzz = widgets.Button(description=\"RUN > > > S.D.Z\")\n",
         "boton_runzzz.style.button_color = '#1e1e1e'\n",
         "boton_runzzz.style.font_weight = 'bold'\n",
         "boton_runzzz.style.color = 'red'\n",
-        "\n",
         "\n",
         "\n",
         "left_box = widgets.VBox([ctrll5])\n",
