--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -28,14 +28,13 @@
         "\n",
         "\n",
         "\n",
-        "#markdown Download tool\n",
         "#import os\n",
         "#from IPython.display import clear_output\n",
         "\n",
         "#save_models_dir = \"/content/sample_data\"#@param {type:\"string\"}\n",
         "#os.chdir(save_models_dir)\n",
-        "#url = \"https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
-        "#!wget --no-check-certificate $url\n",
+        "#url = \"\" #@param {type:\"string\"}\n",
+        "#!wget --no-check-certificate --content-disposition $url\n",
         "\n",
         "#clear_output()\n",
         "#print('\u001b[1;96mModel Save ✓')\n"
